resolves #1391 rouble not found net.minidev:json-smart:jar:2.3-SNAPSHOT resolves #1400 use JDK11 as minimal jvm version and update old jvm dependencies